# hf_libraries_demo

./: ImportingAGithubPyPackage.ipynb  README.md  setup.cfg  setup.py
.github/: README.md
.github/workflows/: docker_build.yml
k8s/: Dockerfile  README.md  demo_job.yml
k8s/peft/: README.md  karpathy_speedups_example.yml  starcoder_base_example.yml  starcoder_custom_train_example.yml  starcoder_karpathy_speedups_example.yml
src/hf_libraries_demo/datasets/: README.md  data_analysis_example.py  load_dataset_example.py  pre_process_example.py
src/hf_libraries_demo/datasets_examples/: data_analysis_example.py  pre_process_example.py
src/hf_libraries_demo/evaluation/: README.md  multi_metric_evaluation.py  simple_evaluation.py
src/hf_libraries_demo/experiments/: README.md  auto_inference.py  custom_finetune_w_trainer.py  en_snli_to_french.py  finetune_w_trainer.py  generation_examples.py  manual_inference.py
src/hf_libraries_demo/experiments/peft/: README.md  base_example.py  base_with_tflops.py  collator_with_padding.py  custom_training_loop_example.py  flops_counter.py  karpathy_speedups_example.py  utils.py
src/hf_libraries_demo/experiments/pretraining/: README.md  causal_roberta_from_scratch.py  roberta_from_scratch.py
src/hf_libraries_demo/package_demo/: README.md  addition_module.py
src/hf_libraries_demo/pipelines/: perfect_pipeline.py  random_label_pipeline.py
