[metadata]
name = hf_libraries_demo
version = 0.0.1
author = Brendan King
author_email = bking2@ucsc.edu
url = https://github.com/kingb12/hf_libraries_demo
description = A python package containing demos for using Huggingface
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Huggingface, datasets, transformers
license = MIT
classifiers =
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
install_requires=
    torch~=1.13.1
    transformers~=4.26.0
    datasets~=2.9.0
[options.package_data]
# If any package or subpackage contains *.txt or *.sql files, include them:
* = *.txt, *.sql, *.pair, *.json, *.py
[options.packages.find]
where=src