[metadata]
name = hf_libraries_demo
version = 0.0.1
author = Brendan King
author_email = bking2@ucsc.edu
url = https://github.com/kingb12/hf_libraries_demo
description = A python package containing demos for using Huggingface
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Huggingface, datasets, transformers
license = MIT
classifiers =
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
install_requires=
    torch~=1.13.1
    transformers~=4.31.0
    datasets~=2.9.0
    evaluate~=0.4.0
    peft~=0.5.0
    wandb~=0.15.4
    scikit-learn~=1.2.2
    accelerate~=0.21.0
    bitsandbytes~=0.41.0

[options.package_data]
# If any package or subpackage contains *.txt or *.sql files, include them:
* = *.txt, *.sql, *.pair, *.json, *.py
[options.packages.find]
where=src